cabal-version:       2.2
name:                stream-sockets
version:             0.1.0.0
synopsis:            stream sockets
-- description:
homepage:            https://github.com/andrewthad/stream-sockets
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
-- copyright:
category:            Network
extra-source-files:  CHANGELOG.md

flag debug
  manual: True
  description: Print debug output 
  default: False

library
  exposed-modules:
    Socket.Datagram.IPv4.Undestined
    Socket.Stream.IPv4
  other-modules:
    Socket.Debug
    Socket.IPv4
    Socket
  build-depends:
    , base >= 4.11.1.0
    , posix-api >= 0.2
    , primitive >= 0.6.4
    , ip >= 1.4.1
  hs-source-dirs: src
  if flag(debug)
    hs-source-dirs: src-debug
  else
    hs-source-dirs: src-production
  default-language: Haskell2010
  ghc-options: -O2 -ddump-simpl -ddump-to-file -dsuppress-all

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , stream-sockets
    , tasty
    , tasty-hunit
    , ip >= 1.4.1
    , primitive >= 0.6.4
    , async
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010

executable sockets-example
  hs-source-dirs: example
  main-is: Main.hs
  build-depends:
    , base
    , stream-sockets
    , ip >= 1.4.1
    , primitive >= 0.6.4
    , bytestring >= 0.10.8.2
    , fast-logger >= 2.4.13
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010
